--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,17 +22,18 @@ set(TestStandards "" CACHE STRING "The list of standards to test explicitly.")
 # Import testing framework
 ##################################################################
 
-if(CMAKE_COMPILER_IS_GNUCXX AND GCC_VERSION VERSION_LESS 5.0)
-  message(STATUS "GCC version is less than 5.0, using gtest-1.8.0")
-  add_subdirectory(libs/gtest-1.8.0 EXCLUDE_FROM_ALL)
-elseif(CMAKE_COMPILER_IS_GNUCXX AND GCC_VERSION VERSION_GREATER 4.0)
-  message(STATUS "GCC version is greater than or equal to 5.0, using gtest-1.8.1")
-  add_subdirectory(libs/gtest-1.8.1 EXCLUDE_FROM_ALL)
-else()
-    message(STATUS "Using gtest-1.8.1")
-  add_subdirectory(libs/gtest-1.8.1 EXCLUDE_FROM_ALL)
-endif()
+# if(CMAKE_COMPILER_IS_GNUCXX AND GCC_VERSION VERSION_LESS 5.0)
+#   message(STATUS "GCC version is less than 5.0, using gtest-1.8.0")
+#   add_subdirectory(libs/gtest-1.8.0 EXCLUDE_FROM_ALL)
+# elseif(CMAKE_COMPILER_IS_GNUCXX AND GCC_VERSION VERSION_GREATER 4.0)
+#   message(STATUS "GCC version is greater than or equal to 5.0, using gtest-1.8.1")
+#   add_subdirectory(libs/gtest-1.8.1 EXCLUDE_FROM_ALL)
+# else()
+#     message(STATUS "Using gtest-1.8.1")
+#   add_subdirectory(libs/gtest-1.8.1 EXCLUDE_FROM_ALL)
+# endif()
 
+add_subdirectory(libs/gtest-1.8.1 EXCLUDE_FROM_ALL)
 include(GoogleTest)
 
 ##################################################################
