--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run CMake
-        run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -DBuildTests=On
+        run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -DXSTLEnableTesting=On
       - name: Build
         run: cmake --build build --parallel 10
       - name: Test
@@ -42,7 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run CMake
-        run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -DBuildTests=On
+        run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -DXSTLEnableTesting=On
       - name: Build
         run: cmake --build build --parallel 10
       - name: Test
@@ -57,7 +57,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run CMake
-        run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -DBuildTests=On -DTestStandards=${{ matrix.standard }}
+        run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Debug -DDXSTLEnableTesting=On -DXSTLTestStandard=${{ matrix.standard }}
       - name: Build
         run: cmake --build build --parallel 10
       - name: Test
