--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -24,13 +24,14 @@ jobs:
         architecture: [x64, x86]
 
     steps:
+      # MAYFAIL GTest works only with mingw64
       - uses: actions/checkout@v3
       - name: Set up MinGW
         uses: egor-tensin/setup-mingw@v2
         with:
           platform: ${{ matrix.architecture }}
       - name: Run CMake
-        run: cmake -S . -B build -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Debug -DBuildTests=On
+        run: cmake -S . -B build -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Debug -DXSTLEnableTesting=On
       - name: Build
         run: cmake --build build --parallel 10
       - name: Test
@@ -46,10 +47,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DBuildTests=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
       if: matrix.build_type == 'Release'
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DBuildTests=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
       if: matrix.build_type == 'Debug'
     - name: Build
       run: cmake --build build --config ${{ matrix.build_type }} --parallel 10
@@ -62,7 +63,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 16 2019" -DBuildTests=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4"
+      run: cmake -S . -B build -G "Visual Studio 16 2019" -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4"
     - name: Build
       run: cmake --build build --config Release --parallel 10
     - name: Test
@@ -78,10 +79,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DBuildTests=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
       if: matrix.build_type == 'Release'
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DBuildTests=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
       if: matrix.build_type == 'Debug'
     - name: Build
       run: cmake --build build --config ${{ matrix.build_type }} --parallel 10
@@ -94,7 +95,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 17 2022" -DBuildTests=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4"
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4"
     - name: Build
       run: cmake --build build --config Release --parallel 10
     - name: Test
@@ -111,11 +112,11 @@ jobs:
       - name: Install Clang
         run: curl -fsSL -o LLVM${{ matrix.version }}.exe https://github.com/llvm/llvm-project/releases/download/llvmorg-${{ matrix.version }}.0.0/LLVM-${{ matrix.version }}.0.0-win64.exe ; 7z x LLVM${{ matrix.version }}.exe -y -o"C:/Program Files/LLVM"
       - name: Run CMake
-        run: cmake -S . -B build -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang++.exe" -G"MinGW Makefiles" -DCMAKE_BUILD_TYPE=Debug -DBuildTests=On
+        run: cmake -S . -B build -DCMAKE_CXX_COMPILER="C:/Program Files/LLVM/bin/clang++.exe" -G"MinGW Makefiles" -DCMAKE_BUILD_TYPE=Debug -DXSTLEnableTesting=On
       - name: Build
         run: cmake --build build --parallel 10
       - name: Test
-        run: cd build ; ctest -j 10 -C Debug --exclude-regex "test-unicode" --output-on-failure
+        run: cd build ; ctest -j 10 -C Debug --output-on-failure
 
   clang-cl-11:
     runs-on: windows-2019
@@ -126,8 +127,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run CMake
-        run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -T ClangCL -DBuildTests=On
+        run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -T ClangCL -DXSTLEnableTesting=On
       - name: Build
         run: cmake --build build --config Debug --parallel 10
       - name: Test
-        run: cd build ; ctest -j 10 -C Debug --exclude-regex "test-unicode" --output-on-failure
+        run: cd build ; ctest -j 10 -C Debug --output-on-failure
