--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -386,6 +386,6 @@ message(STATUS "Finished building requirements for installing the package.\n")
 if(XSTLEnableTesting)
   enable_testing()
   message(STATUS "Build unit tests for the project. Tests should always be found in the test folder\n")
-  add_subdirectory(libs/googletest)
+  add_subdirectory(${CMAKE_SOURCE_DIR}/libs/googletest)
   add_subdirectory(test)
 endif()
