--- a/include/xstl/config/config.h.in
+++ b/include/xstl/config/config.h.in
@@ -10,15 +10,9 @@
 
 #if defined(__GNUC__)
 #define XSTL_GCC 1
-#define XSTL_CLANG 0
-#define XSTL_MSVC 0
 #elif defined(__clang__)
-#define XSTL_GCC 0
 #define XSTL_CLANG 1
-#define XSTL_MSVC 0
 #elif defined(_MSC_VER)
-#define XSTL_GCC 0
-#define XSTL_CLANG 0
 #define XSTL_MSVC 1
 #endif
 
@@ -28,66 +22,66 @@
 #if defined(_WIN32) && !defined(_WIN64)
 #define XSTL_WIN 1
 #define XSTL_WIN32 1
-#define XSTL_WIN64 0
-#define XSTL_LINUX 0
-#define XSTL_MAC 0
 #elif defined(_WIN64) && !defined(_WIN32)
 #define XSTL_WIN 1
-#define XSTL_WIN64 0
-#define XSTL_WIN32 0 
-#define XSTL_LINUX 0
-#define XSTL_MAC 0
+#define XSTL_WIN64 1
 #elif defined(_WIN32) && defined(_WIN64)
 #define XSTL_WIN 1
 #define XSTL_WIN32 1
 #define XSTL_WIN64 1
-#define XSTL_LINUX 0
-#define XSTL_MAC 0
 #endif
 
 #if defined(__linux__) || defined(__unix__)
-#define XSTL_LINUX 1
-#else
-#define XSTL_LINUX 0
-#endif
-
-#if defined(__APPLE__)
+#define XSTL_UNIX 1
+#elif defined(__APPLE__)
 #define XSTL_MAC 1
-#else
-#define XSTL_MAC 0
 #endif
 
 // cpp version:
 
+#if defined(__cplusplus)
 #define XSTL_CXX11 __cplusplus >= 201103L
 #define XSTL_CXX14 __cplusplus >= 201403L
 #define XSTL_CXX17 __cplusplus >= 201703L
 #define XSTL_CXX20 __cplusplus >= 202003L
 #define XSTL_CXX23 __cplusplus >  202003L
+#endif
 
 // Library options:
+
 #if defined(_DEBUG) || NDEBUG
 #define XSTL_DEBUG 1
-#elif
+#else
 #define XSTL_DEBUG 0
 #endif
 
-//#define XSTL_DISABLE_EXTENSIONS 
-//#define XSTL_UNDER_TEST ON
+#if defined(_XSTL_DisableExtensions)
+#define XSTL_DISABLE_EXTENSIONS 1
+#else
+#define XSTL_DISABLE_EXTENSIONS 0
+#endif
 
 // **************************************
 /// Define internal and public components
 // **************************************
 
-#if !defined(XSTL_API) && !defined(XSTL_INTERNAL) && defined(_WIN32)
+#if defined(BUILD_SHARED) && defined(XSTL_MSVC)
 #define XSTL_API __declspec(dllexport)
-#define XSTL_INTERNAL 
-#endif // WIN32 || _WIN32
+#define XSTL_INTERNAL
+#else
+#define XSTL_API
+#define XSTL_INTERNAL
+#endif // XSTL_MSVC
 
-#if !defined(XSTL_API) && !defined(XSTL_INTERNAL) && !defined(_WIN32)
+#if defined(BUILD_SHARED) 
+#ifdef XSTL_GCC || XSTL_CLANG
 #define XSTL_API __attribute__((visibility("default")))
 #define XSTL_INTERNAL __attribute__((visibility("hidden")))
-#endif
+#endif // XSTL_GCC
+#else
+#define XSTL_API
+#define XSTL_INTERNAL
+#endif // shared
 
 // **************************************
 /// Features Test
@@ -201,12 +195,12 @@
 #if XSTL_GCC
 /// __XSTL_ReadOnlyAccess, __XSTL_ReadWriteAccess, __XSTL_WriteOnlyAccess 
 /// enable the detection of invalid or unsafe accesses by functions to which they apply or their callers, as well as write-only accesses to objects that are never read from. Such accesses may be diagnosed by warnings such as -Wstringop-overflow, -Wuninitialized, -Wunused, and others.
-#define __XSTL_ReadOnlyAccess(arg_index) __attribute__ ((access (read_only, arg_index)))
-#define __XSTL_ReadWriteAccess(arg_index) __attribute__ ((access (read_write, arg_index)))
-#define __XSTL_WriteOnlyAccess(arg_index) __attribute__ ((access (write_only, arg_index)))
+#define _XSTL_ReadOnlyAccess(arg_index) __attribute__ ((access (read_only, arg_index)))
+#define _XSTL_ReadWriteAccess(arg_index) __attribute__ ((access (read_write, arg_index)))
+#define _XSTL_WriteOnlyAccess(arg_index) __attribute__ ((access (write_only, arg_index)))
 
-#define __XSTL_RarelyUsed __attribute__((cold))
-#define __XSTL_AggressiveOptimize __attribute__((hot))
+#define _XSTL_RarelyUsed __attribute__((cold))
+#define _XSTL_AggressiveOptimize __attribute__((hot))
 #endif
 
 // **************************************
